resolved whitespace and set basic layout

--- a/src/Components/Footer/Footer.module.css
+++ b/src/Components/Footer/Footer.module.css
@@ -6,7 +6,7 @@
     display: flex;
     flex-direction: column;
     gap: 2.3rem;
-    padding: 2% 4%;
+    /* padding: 2% 4%; */
 }
 .dot{
     width: 60px;
@@ -33,11 +33,13 @@ line-height: 20px; /* 142.857% */
 .div3{
     display: flex;
     justify-content: space-between;
+    padding: 1% 4%;
 
 }
 .div3left{
     display: flex;
     gap: 0.5rem;
+    
 }
 .div3right>:nth-child(1){
     color: var(--grey-tone-g-0, #FFF);
