--- a/src/Components/Poster/Poster.module.css
+++ b/src/Components/Poster/Poster.module.css
@@ -13,8 +13,9 @@
     color: red;
     display: flex;
     flex-direction: column;
+    gap: 1rem;
     width: 30%;
-  
+    
     right: 41px;
     top: 32%;
     
